# phil

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml
docs/source/: api.rst  conf.py  configuration.rst  index.rst  magic.rst  overview.rst  phil.rst  transformers.rst  user_guide.rst
docs/source/_static/: custom.css
docs/source/userGuides/: advanced.rst  best_practices.rst  installation.rst  intermediate.rst  programmatic.rst  quickstart.rst  testing.rst
phil/: __init__.py  gallery.py  phil.py  transformers.py
phil/imputation/: __init__.py  config.py  distribution.py
phil/magic/: __init__.py  base.py  config.py  ect.py  rust_backend.py
tests/: conftest.py
tests/imputation/: test_distribution.py
tests/magic/: test_base.py  test_ect.py
tests/phil/: test_columns.py  test_config.py  test_descriptors.py  test_fit.py  test_imputation.py  test_initialization.py
