[project]
name = "philler"
version = "1.0.0"
authors = [
    {name = "Krv Labs", email = "team@krv.ai"}
]
description = "Phil: representation-guided multiverse imputation with Rust-backed ECT."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {include = ["phil", "phil.*"]}

[tool.uv.sources]
trailed = { index = "krv-research" }

[[tool.uv.index]]
name = "krv-research"
url = "https://api.pyx.dev/simple/krv/research"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pdoc>=15.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.8",
]
