[project]
name = "philler"
version = "1.0.0"
authors = [
    {name = "Krv Labs", email = "team@krv.ai"}
]
description = "Phil: multiverse imputation powered by topology-based representation learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "trailed>=0.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {include = ["phil", "phil.*"]}


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pdoc>=15.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.8",
]
docs = [
    "sphinx>=7.4,<9",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "IPython>=8.18.1",
    "nbsphinx>=0.9.5",
]
